<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_short">GenApp</string>
    <string name="app_name">Genetica Medica</string>
    <string name="hello_world">Hetlo world!</string>
    <string name="action_settings">Settings</string>
    <string name="materia">Specializzazione</string>
    <string name="livello">Livello</string>
    <string name="minuti">Tempo (minuti)</string>
    <string name="start_button">Inizia!</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="prevquestion">&lt;</string>
    <string name="nextquestion">&gt;</string>
    <string name="giuste">OK</string>
    <string name="errate">KO</string>
    <string name="start">Inizia</string>
    <string name="stat">Statistiche</string>
    <string name="info">Info</string>
    <string name="ipaddress">IP</string>
    <string name="ok">OK</string>
    <string name="ko">KO</string>
    <string name="dataloading">Caricamento dati</string>
    <string name="importdb_label">Import DB</string>
    <string name="exportdb_label">Export db</string>
    <string name="tempo_scaduto">Tempo scaduto!</string>
    <string name="info1">Per ogni questione relativa alla parte tecnica dell\'app contattare boymask2000@gmail.com</string>
    <string name="reset_lev">Reset Livello</string>
    <string name="tag">Parola chiave</string>
    <string name="num_domanda">Domanda n;</string>
    <string name="reset_stat">Reset statistiche</string>
</resources>