<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/materia" />

        <Spinner
            android:id="@+id/materie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/materia" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livello" />

        <Spinner
            android:id="@+id/livello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/livello" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minuti" />

        <EditText
            android:id="@+id/minuti"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/start_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/start_button" >
    </Button>

</LinearLayout>