<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name" />

        <Space
            android:layout_width="40dp"
            android:layout_height="50dp" />


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/livello" />

            <TextView
                android:id="@+id/livello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/scorcia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/scorcia" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/materia" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/materie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/select_button_materia"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/spinner" />
        </LinearLayout>


        <Space
            android:layout_width="40dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/tag" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/hotwords"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Space
                android:layout_width="40dp"
                android:layout_height="50dp" />
            <ImageButton
                android:id="@+id/select_button_hot"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/spinner" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/minuti"
            android:text="@string/minuti" />

        <EditText
            android:id="@+id/minuti"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/start_button"></Button>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom" />
</LinearLayout>