<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="12sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:text="@string/materia" />

        <TextView
            android:id="@+id/materia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="12sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_domanda"
            android:textSize="12sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/num_domanda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errate"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="12sp">

        <TextView
            android:id="@+id/corrente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <Space
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/errate"
            android:textSize="12sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/errate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff0000"
            android:textSize="12sp" />

        <Space
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/giuste"
            android:textSize="12sp" />

        <Space
            android:layout_width="5dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/giuste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <Space
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/livello"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/livello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />

        <Space
            android:layout_width="30dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>